# ai_3d

./: .gitignore  CLAUDE.md  test.md
autonomous-creator/: .env.example  CLAUDE.md  README.md  auto_image_generator.py  framepack_batch_convert.py  framepack_video_generator.py  generate_hearono_episode.py  generate_hearono_sd35.py  prompt_expander.py  pyproject.toml  run_framepack_batch.py  run_framepack_simple.py  test_3d_animation_scene.py  test_3d_character_sheet.py  test_chunking_only.py  test_consistency_4elements.py  test_consistency_4elements_v2.py  test_consistency_final.py  test_consistency_url.py  test_consistency_v2.py  test_consistency_v3.py  test_e2e_api_pipeline.py  test_e2e_story_to_image.py  test_face_authority_integration.py  test_file_upload.py  test_file_upload_v2.py  test_framepack.py  test_full_pipeline.py  test_hearono.py  test_hearono_images.py  test_hearono_video.py  test_method2_composite.py  test_method4_masked.py  test_minimax_character_consistency.py  test_minimax_consistency_retry.py  test_minimax_debug.py  test_minimax_image_debug.py  test_minimax_image_debug2.py  test_minimax_story.py  test_pipeline_e2e.py  (+21 more)
autonomous-creator/backup_20260408/: ip_adapter_client.py  render_engine.py  sd35_generator.py
autonomous-creator/config/: __init__.py  api_config.py  settings.py
autonomous-creator/core/: __init__.py
autonomous-creator/data/: story_components.db
autonomous-creator/docs/: ARCHITECTURE.md  CONFIGURATION.md  WORKFLOW.md
autonomous-creator/examples/: character_example.py
autonomous-creator/infrastructure/: __init__.py
(+268 files in other folders)
