[project]
name = "autonomous-creator"
version = "0.1.0"
description = "AI-powered multi-language short video generation system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",

    # AI/ML
    "torch>=2.1.0",
    "diffusers>=0.26.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "safetensors>=0.4.0",
    "opencv-python>=4.9.0",

    # TTS
    "edge-tts>=6.1.0",
    "azure-cognitiveservices-speech>=1.34.0",

    # Video
    "moviepy>=1.0.3",
    "ffmpeg-python>=0.2.0",

    # HTTP
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",

    # Utils
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
autonomous = "interfaces.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
